Color and alignment fixes

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -166,7 +166,6 @@ table {
 
 // Header
 .site-header {
-  background-color: #2c2d33;
   padding-top: 2.618rem;
   color: #9aa0a7;
   background-position: center center;
