--- a/sass/base/_config.scss
+++ b/sass/base/_config.scss
@@ -15,6 +15,7 @@ $font__base: "Bitter", "Helvetica Neue", Helvetica, sans-serif;
 // Base color scheme
 // More can be found in _globals.scss
 $body-background: #fcfcfc;
+$base-background: #2c2d33;
 $color_body: #60646c;
 $color_links: #87d37c;
 $color_border: rgba(#000, .1);
