--- a/sass/base/layout.scss
+++ b/sass/base/layout.scss
@@ -54,7 +54,7 @@
 
 // Header
 .site-header {
-  background-color: #2c2d33;
+  background-color: $base-background;
   padding-top: 2.618rem;
   color: #9aa0a7;
   background-position: center center;
