--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -147,7 +147,7 @@
         position: absolute;
         top: 100%;
         z-index: 99999;
-        background-color: #2c2d33;
+        background-color: $base-background;
         display: none;
 
         // display: none; is required to make dropdowns work on touch devices
@@ -209,7 +209,7 @@
 
       ul {
         // Dropdowns
-        background-color: #2c2d33;
+        background-color: $base-background;
         margin-left: 0;
 
         li {
@@ -290,7 +290,7 @@
       }
 
       ul {
-        background-color: #2c2d33;
+        background-color: $base-background;
 
         a {
           padding: .326rem .857rem;
