--- a/sass/woocommerce/woocommerce.scss
+++ b/sass/woocommerce/woocommerce.scss
@@ -56,7 +56,7 @@
 
   .widget_shopping_cart {
     display: none;
-    background-color: #2c2d33;
+    background-color: $base-background;
 
     .product_list_widget {
       max-height: 15rem;
@@ -72,9 +72,9 @@
   .widget_product_search {
     input[type=text],
     input[type=search] {
-      padding: .625rem .9375rem;
+      padding: .625rem;
       line-height: 1.5;
-      padding-left: 3.631rem;
+      padding-left: 3rem;
     }
 
     form {
